# rover

./: README.md  cmake_libs.cmake
commons/: CMakeLists.txt
commons/include/commons/: buffer.h
commons/src/: CMakeLists.txt
commons/src/include/commons/: buffer.h
core/: CMakeLists.txt
core/include/: core.h
core/include/core/: battery_monitor.h  battery_status_led.h  status_led.h
core/src/: CMakeLists.txt  battery_monitor.c  battery_status.c  core.c  status_led.c
core/src/include/: core.h
core/src/include/core/: status_led.h
core_tests/: CMakeLists.txt
core_tests/src/: CMakeLists.txt  battery_monitor_test.c  status_led_success_test.c
drivers/: CMakeLists.txt
drivers/include/drivers/: adc.h  comms.h  led.h  log.h
drivers/src/: CMakeLists.txt
drivers/src/include/drivers/: led.h  time.h
pico/: CMakeLists.txt  README.md
pico/src/: CMakeLists.txt  drivers.c  main.c
pico/src/include/pico/: led.h
